[package]
name = "boom_you_up_r"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0", features = ["clock"] }
clap = { version = "4", features = ["derive", "unicode"] }
notify-rust = "4"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0"
soloud = "1"

opener = { path = "libs/opener" }

[build-dependencies]
clap = { version = "4", features = ["derive", "unicode"] }
clap_complete = "*"
